[gd_scene load_steps=61 format=2]

[ext_resource path="res://src/actors/Boss/Boss.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/Sprites/Enemies/attack/PNGs/Nautolan Ship - Dreadnought - Weapons.png" type="Texture2D" id=2]
[ext_resource path="res://src/Assets/Sound/BossSound/superraygun.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Assets/Sprites/MainShip/Engine/Main Ship - Engines - Base Engine - Powering.png" type="Texture2D" id=4]
[ext_resource path="res://src/Assets/Sound/EnemiesSound/EnemyHit.mp3" type="AudioStream" id=5]
[ext_resource path="res://src/Assets/Sound/BossSound/BossExplosion.wav" type="AudioStream" id=6]
[ext_resource path="res://src/Assets/Sprites/Enemies/Death/Boss/Nautolan Ship - Dreadnought.png" type="Texture2D" id=7]

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 7 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 7 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 7 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 7 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 1920, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 2048, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 2176, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 2304, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 2432, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 2560, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 2688, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 2816, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 2944, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 3072, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 3200, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 3328, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 3456, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 3584, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 3712, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 3840, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 3968, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 4096, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 4224, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 4352, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "Death",
"speed": 4.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "attack",
"speed": 17.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
} ]

[node name="Boss" type="Area2D" groups=["boss", "damageable"]]
scale = Vector2( 2, 2 )
z_index = 2
collision_layer = 16
collision_mask = 15
script = ExtResource( 1 )
bossHP = 1000
bossDamage = 50

[node name="Engine" type="AnimatedSprite2D" parent="."]
modulate = Color( 0.521569, 0, 1, 1 )
position = Vector2( 19, 0 )
rotation = -1.5708
scale = Vector2( 1.8, 2.5 )
frames = SubResource( 41 )
playing = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
rotation = -1.5708
frames = SubResource( 36 )
animation = "idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
rotation = -1.5708
polygon = PackedVector2Array( 0, 52, 8, 41, 18, 41, 34, 27, 26, 12, 36, -6, 22, -21, 25, -35, 4, -45, -5, -45, -25, -35, -21, -22, -36, -7, -26, 10, -34, 26, -17, 40, -8, 41 )

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2( -2.5, -1 )
scale = Vector2( 8.35, 4.7 )

[node name="muzzle" type="Marker2D" parent="."]
position = Vector2( -46, 0 )

[node name="TakeDamage" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( -48.5, -0.5 )
scale = Vector2( 3.50582, 1 )
stream = ExtResource( 3 )

[node name="Destroyed" type="AudioStreamPlayer2D" parent="."]
visible = false
position = Vector2( -48.5, 0 )
stream = ExtResource( 6 )

[connection signal="area_entered" from="." to="." method="_on_Boss_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
